--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vortizhe.simple-ruby-erb",
     "shanehofstetter.rails-i18n",
     "karunamurti.haml",
-    "gizmos.docs-yaml",
+    "docsmsft.docs-yaml",
     "karunamurti.rspec-snippets",
     "noku.rails-run-spec-vscode",
     "aliariff.auto-add-brackets",
