fix json syntax

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "ldrner.rspec-snippets-vscode",
     "ninoseki.vscode-gem-lens",
     "mikestead.dotenv",
-    "pascalreitermann93.vscode-yaml-sort
-"
+    "pascalreitermann93.vscode-yaml-sort"
   ]
 }
