--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ZneuRay.erb-vscode-snippets",
     "aki77.rails-partial",
     "aki77.rails-view-component",
-    "aki77.quick-open-rails"
+    "aki77.quick-open-rails",
+    "elliotlarson.ruby-around-the-block"
   ]
 }
