replace ruby language server extension
old extension by rebornix is deprecated and started crashing

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pack-rails",
   "displayName": "Ruby and Rails Extension Pack",
   "description": "Carefully selected extensions and little helper that I use to develop Ruby and Ruby on Rails applications.",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "publisher": "endverbraucher",
   "engines": {
     "vscode": "^1.26.0"
@@ -21,7 +21,7 @@
   },
   "extensionPack": [
     "miguel-savignano.ruby-symbols",
-    "rebornix.ruby",
+    "shopify.ruby-lsp",
     "lokalise.i18n-ally",
     "karunamurti.haml",
     "docsmsft.docs-yaml",
