add mogami and gemfile lock highlight

--- a/package.json
+++ b/package.json
@@ -20,29 +20,31 @@
     "url": "https://github.com/endverbraucher/vscode-pack-rails.git"
   },
   "extensionPack": [
-    "miguel-savignano.ruby-symbols",
-    "shopify.ruby-lsp",
-    "lokalise.i18n-ally",
-    "karunamurti.haml",
-    "docsmsft.docs-yaml",
-    "noku.rails-run-spec-vscode",
-    "aliariff.auto-add-brackets",
-    "kaiwood.endwise",
-    "aki77.rails-db-schema",
     "aki77.haml-lint",
-    "cjay.ruby-and-rails-snippets",
-    "sporto.rails-go-to-spec",
-    "aki77.rails-routes",
-    "ldrner.rspec-snippets-vscode",
-    "mikestead.dotenv",
-    "pascalreitermann93.vscode-yaml-sort",
-    "jemmyw.rails-fast-nav",
-    "craigmaslowski.erb",
-    "ZneuRay.erb-vscode-snippets",
-    "aki77.rails-partial",
-    "aki77.rails-view-component",
     "aki77.quick-open-rails",
+    "aki77.rails-db-schema",
+    "aki77.rails-partial",
+    "aki77.rails-routes",
+    "aki77.rails-view-component",
+    "aliariff.auto-add-brackets",
+    "cjay.ruby-and-rails-snippets",
+    "craigmaslowski.erb",
+    "docsmsft.docs-yaml",
     "elliotlarson.ruby-around-the-block",
-    "tavo.rails-schema"
+    "jemmyw.rails-fast-nav",
+    "kaiwood.endwise",
+    "karunamurti.haml",
+    "ldrner.rspec-snippets-vscode",
+    "lokalise.i18n-ally",
+    "miguel-savignano.ruby-symbols",
+    "mikestead.dotenv",
+    "ninoseki.vscode-mogami",
+    "noku.rails-run-spec-vscode",
+    "pascalreitermann93.vscode-yaml-sort",
+    "sevenc-nanashi.gemfile-lock-highlight",
+    "shopify.ruby-lsp",
+    "sporto.rails-go-to-spec",
+    "tavo.rails-schema",
+    "ZneuRay.erb-vscode-snippets"
   ]
 }
